--- a/node-local/package.json
+++ b/node-local/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "node8",
+  "name": "local",
   "version": "1.0.0",
   "description": "",
-  "main": "service.config.js",
+  "main": "bb-box.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {}
+  "license": "ISC"
 }
