--- a/traefik/rules/node-docker.toml
+++ b/traefik/rules/node-docker.toml
@@ -1,7 +1,7 @@
 [backends]
   [backends.nodedocker]
     [backends.nodedocker.servers.server1]
-    url = "http://127.0.0.1:7013"
+    url = "http://node-docker:7013"
 [frontends]
   [frontends.nodedocker]
   backend = "nodedocker"
